# patrimony

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  rxconfig.py
assets/: styles.css
development/: connectors_constructor.py
docs/backend/: applications.md  backend.md
docs/backend/domain/: connectors.md  domain.md  repositories.md  services.md
docs/backend/infrastructure/: database.md  infrastructure.md  integrations.md  web_connector.md
docs/frontend/: frontend.md
patrimony/: patrimony.py
patrimony/backend/: __init__.py  di_container.py  table_state.py
patrimony/backend/api/: __init__.py  cash_api.py  service_factory.py  stock_api.py
patrimony/backend/application/: __init__.py  cash_use_cases.py  connector_history_use_cases.py  connector_use_cases.py  di_container.py  dividend_use_cases.py  file_import_use_cases.py  portfolio_use_cases.py  property_use_cases.py  securities_use_cases.py  web_connector_use_cases.py
patrimony/backend/common/: metaclasses.py
patrimony/backend/config/: __init__.py  logging_config.py
patrimony/backend/database/: connection.py  ddl.py  queries.py
patrimony/backend/domain/: __init__.py  assets.py  constants.py  entities.py  exceptions.py  interfaces.py  portfolio.py  repositories.py  services.py
patrimony/backend/infrastructure/: __init__.py  market_data_provider.py
patrimony/backend/presentation/: di_container.py
patrimony/backend/services/: cash_service.py  price_service.py  stock_service.py
patrimony/components/: card.py  navbar.py  notification.py
patrimony/frontend/: file_connector_config.py  services.py  utils.py
patrimony/frontend/components/: card.py  chart_toggle.py  dialog.py  dialog_factory.py  donut_chart.py  empty_table.py  loading.py  navbar.py  navigation.py  notification.py  sidebar.py
patrimony/frontend/config/: __init__.py  event_collector.py  file_connector_config.py  logging_config.py
patrimony/frontend/dialogs/: __init__.py  add_cash.py  add_stock.py  cash_dialog.py  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
tests/: conftest.py
tests/integration/: test_database.py
tests/unit/: test_constants.py  test_date_utils.py  test_entities.py  test_exceptions.py  test_mixins.py  test_service_models.py  test_translations.py
(+159 files in other folders)
