[project]
name = "patrimony"
version = "0.1.0"
description = "A personal wealth tracking application."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=44.0",
    "dependency-injector>=4.48.3",
    "duckdb>=1.4.3",
    "fastexcel>=0.19.0",
    "playwright>=1.49.0",
    "playwright-stealth>=1.0.6",
    "polars>=1.37.1",
    "pyyaml>=6.0",
    "pyarrow>=22.0.0",
    "pydantic-settings>=2.0",
    "reflex>=0.8.25",
    "yfinance>=1.0",
]

[project.optional-dependencies]
dev = [
    "flask>=3.0",
]
